--- a/css/developer.css
+++ b/css/developer.css
@@ -4,6 +4,7 @@ body {
     --purple-navy: #474973;
     --oxford-blue: #161B33;
     --blue-black: #0D0C1D;
+    margin: 0;
 }
 
 
@@ -11,9 +12,51 @@ body {
     background-color: var(--blue-black);
     color: var(--blue-gray);
     padding: 2%;
+    margin: 0px;
 
 }
 
-.nav-wrapper > .nav-link {
+/* Referenced from W3Schools */
+
+.dropbtn {
+    background-color: var(--blue-gray);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: var(--oxford-blue);
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--almond);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+
+  .dropdown-content a {
+    color: var(--blue-black);
+    padding: 12px 16px;
     text-decoration: none;
-}
+    display: block;
+  }
+  
+
+  .dropdown-content a:hover {background-color: var(--blue-gray);}
+  
+  
+  .show {display:block;}
+
+  /* No longer W3Schools */
