--- a/css/designer.css
+++ b/css/designer.css
@@ -4,8 +4,9 @@ body {
     --purple-navy: #474973;
     --oxford-blue: #161B33;
     --blue-black: #0D0C1D;
-}
 
-header {
     background-image: url(../images/Background-images/pier68-boats.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
 }
