--- a/css/developer.css
+++ b/css/developer.css
@@ -67,6 +67,8 @@ body {
     grid-template-columns: 1fr 1fr;
     padding: 20px;
     font-family: 'inter', sans-serif;
+    
+   
   }
 
   .contact-nav > i {
@@ -77,6 +79,10 @@ body {
   .main-title {
     font-family: 'Lato', sans-serif;
     font-size: 2em;
+    color: #f2ebe6;
 
   }
 
+  .address {
+    font-weight: bold;
+  }
