--- a/css/designer.css
+++ b/css/designer.css
@@ -10,3 +10,9 @@ body {
     background-repeat: no-repeat;
     background-size:cover;
 }
+
+header {
+    width: 100%;
+    height: 1000px;
+    background-color: red;
+}
