--- a/css/developer.css
+++ b/css/developer.css
@@ -4,6 +4,8 @@ body {
     --purple-navy: #474973;
     --oxford-blue: #161B33;
     --blue-black: #0D0C1D;
+    --building-red: #d15454;
+    --building-yellow: #F2C53D;
     margin: 0;
 }
 
@@ -40,7 +42,7 @@ body {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: var(--almond);
+    background-color: var(--building-red);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -48,7 +50,8 @@ body {
   
 
   .dropdown-content a {
-    color: var(--blue-black);
+    color: var(--building-yellow);
+    font-family: 'Rubik', sans-serif;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -85,4 +88,19 @@ body {
 
   .address {
     font-weight: bold;
+  }
+
+  footer {
+    padding: 5%;
+    background-color: var(--oxford-blue);
+  }
+
+  footer > a {
+    color: var(--almond);
+    text-decoration: none;
+    font-family: 'inter', sans-serif;
+  }
+
+  footer > a:hover {
+    color: var(--blue-gray);
   }
