--- a/css/designer.css
+++ b/css/designer.css
@@ -18,7 +18,7 @@ header {
     width: 100%;
     height: 450px;
     background-color: lightgray;
-    border-top: 5px solid #0D0C1D;
+    border-top: 10px solid var(--oxford-blue);
 }
 
 
@@ -120,4 +120,11 @@ header {
 
 .img {
     height: 400px;
+}
+
+.section {
+    width: 100%;
+    height: 450px;
+    background-color: lightgray;
+    border-top: 10px solid var(--oxford-blue);
 }
