--- a/css/developer.css
+++ b/css/developer.css
@@ -108,7 +108,15 @@ body {
   .map {
     margin: 20px 30%;
     padding: 30px;
+  }
 
+  .map-section {
+    display: flex;
+    padding: 20%;
+    background-color: lightgrey;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
   }
 
   main {
@@ -124,3 +132,5 @@ body {
     font-family: 'inter', sans-serif;
     color: var(--blue-gray)
   }
+
+ 
