--- a/css/designer.css
+++ b/css/designer.css
@@ -17,7 +17,7 @@ body {
 header {
     width: 100%;
     height: 450px;
-    background-color: lightgray;
+    background-color: var(--blue-gray);
     border-top: 10px solid var(--oxford-blue);
     display: flex;
     justify-content: center;
@@ -129,7 +129,7 @@ header {
 section {
     width: 100%;
     height: 450px;
-    background-color: lightgray;
+    background-color: var(--blue-gray);
     border-top: 10px solid var(--oxford-blue);
 
 }
