--- a/css/developer.css
+++ b/css/developer.css
@@ -78,12 +78,7 @@ body {
 
 
   .main-title {
-    font-family: 'Lato', sans-serif;
-    font-size: 2em;
-    color: #e8edec;
-    border: 5px solid #e8edec;
-    padding: 2px;
-    text-align: center;
+    width: 300px;
 
   }
 
