--- a/css/designer.css
+++ b/css/designer.css
@@ -22,6 +22,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 120px;
 }
 
 
@@ -130,6 +131,5 @@ section {
     width: 100%;
     height: 450px;
     background-color: var(--blue-gray);
-    border-top: 10px solid var(--oxford-blue);
 
 }
