--- a/css/developer.css
+++ b/css/developer.css
@@ -29,6 +29,7 @@ body {
     font-size: 16px;
     border: none;
     cursor: pointer;
+    border-radius: 4px;
   }
   
   .dropbtn:focus {
@@ -47,6 +48,7 @@ body {
     min-width: 160px;
     box-shadow: 0px 10px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    border-radius: 4px;
   }
   
 
@@ -132,6 +134,7 @@ body {
     color: var(--blue-gray);
     font-size: 25px;
     padding: 30px;
+    border-radius: 4px;
   }
 
   .boat-img {
