--- a/css/designer.css
+++ b/css/designer.css
@@ -98,14 +98,14 @@ header {
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: var(--oxford-blue);
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+  background-color: var(--almond);
 }
 
 /* Fading animation */
